Add contact endpoint
