# server/index.js
@@ -7,14 +7,18 @@ require("dotenv").config();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
-const { router, requireAuth } = require("./routes/auth");
+const AuthRouter = require("./routes/auth");
+const ContactRouter = require("./routes/contact");
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+console.log("AuthRouter:", typeof AuthRouter);
+console.log("ContactRouter:", typeof ContactRouter); 
 
 app.use(express.json())
 app.use(cors());
 
-app.use(router)
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use("/auth", AuthRouter);
+app.use("/contact", ContactRouter); 
 
 mongoose.connect(process.env.MONGO_URI)
   .then(() => {
